--- a/src/components/all.sass
+++ b/src/components/all.sass
@@ -1,12 +1,12 @@
 @import "~bulma/sass/utilities/initial-variables"
 
 // Config vars
-// Kaldi logo brand color: #FD461E
-$kaldi-red: #D64000
-$kaldi-red-invert: #fff
+// the-sword logo brand color: #FD461E
+$the-sword-red: #D64000
+$the-sword-red-invert: #fff
 
-$primary: $kaldi-red
-$primary-invert: $kaldi-red-invert
+$primary: $the-sword-red
+$primary-invert: $the-sword-red-invert
 $body-color: #333
 $black: #2b2523
 
@@ -88,9 +88,9 @@ footer.footer
 $menu-item-color: $white-ter
 $menu-item-hover-color: $black !important
 $menu-item-hover-background-color: $black
-$menu-item-active-color: $kaldi-red-invert
-$menu-item-active-background-color:	$kaldi-red-invert
-$menu-list-border-left: 1px solid $kaldi-red-invert
+$menu-item-active-color: $the-sword-red-invert
+$menu-item-active-background-color:	$the-sword-red-invert
+$menu-list-border-left: 1px solid $the-sword-red-invert
 $menu-label-color: $white-ter
 
 
